# QtToolWindowManager

./: README.md
src/: CMakeLists.txt  qabstracttoolwindowmanagerarea.h  qtoolwindowmanager.h
src/private/: qtoolwindowmanager_p.h
